index.html include index.css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>My Github.io Website</title>
     <meta name="description" content="My Github.io Website">
-    <meta name="author" content="SitePoint">
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="index.css">
 </head>
     
 <body>
