--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>My Github.io Website</h1>
     <p>Paragraph content for my Github.io website.</p>
     <script src="js/scripts.js"></script>
+    <img src="/images/VelaSupernova.jpg" alt="VelaSupernova" width="500" height="600">
 </body>
     
 </html>
