update index and datetime.js

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 
 
-<button onclick="f()" id="button">Press me!</button>
+<button onclick="dateTime()" id="button">Date and Time!</button>
 
-<script src="javascript/timestamplogging.js"></script>
+<script src="javascript/dateTime.js"></script>
 </body>
 </html>
